--- a/Frontend/apps/admin/src/app/pages/has-auth-layout/has-auth-layout.component.html
+++ b/Frontend/apps/admin/src/app/pages/has-auth-layout/has-auth-layout.component.html
@@ -1,3 +1,6 @@
 <!--<app-navbar></app-navbar>-->
 <h1>{{ response }}</h1>
+<p>ABC</p>
+<p>XYZ</p>
+<p>XKAKKAL</p>
 <!--<router-outlet></router-outlet>-->
