Add sidebar admin and some libs for angular 08-05-2025

--- a/Frontend/apps/admin/src/app/app.component.html
+++ b/Frontend/apps/admin/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-has-auth-layout></app-has-auth-layout>
-<router-outlet></router-outlet>
+<!--<app-has-auth-layout></app-has-auth-layout>-->
+<lib-login></lib-login>
