Add footer, home component admin and services:my-form-builder,dummy-text for angular 12-05-2025

--- a/Frontend/apps/admin/src/app/components/footer/footer.component.html
+++ b/Frontend/apps/admin/src/app/components/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<footer class="mt-20 border-t border-gray-200 pt-8 pb-4 text-center">
+  <div class="container mx-auto px-4">
+    <p class="text-sm text-gray-600 mb-2">
+      <span class="font-semibold bg-gradient-to-r from-my-blue to-my-purple bg-clip-text text-transparent">
+        Bản quyền thuộc về © LOTUS - Lịch Sử Việt Nam
+      </span>
+    </p>
+    <p class="text-sm text-gray-600">
+      Liên hệ: <a href="mailto:assistant.vhl.trannhanweb.io.vn@gmail.com" class="text-my-blue hover:underline">assistant.vhl.trannhanweb.io.vn&#64;gmail.com
+    </a>
+    </p>
+  </div>
+</footer>
