--- a/Frontend/global.css
+++ b/Frontend/global.css
@@ -13,6 +13,10 @@ body {
   font-family: "National Park Regular", sans-serif;
 }
 
+.error {
+  @apply text-red-500 text-sm mt-1
+}
+
 /* .toast {
   @apply bg-blue-600 text-white p-4 rounded-lg;
 }
