--- a/Frontend/libs/angular-libs/src/lib/components/action-button/action-button.component.html
+++ b/Frontend/libs/angular-libs/src/lib/components/action-button/action-button.component.html
@@ -5,7 +5,7 @@
     [type]="isSubmit ? 'submit' : 'button'"
     (click)="btnClick.emit()"
   >
-    <mat-icon fontSet="material-icons-round" class="text-xl">{{ buttonConfig.icon }}</mat-icon>
+    <ng-icon [name]="buttonConfig.icon" class="text-xl">{{ buttonConfig.icon }}</ng-icon>
   </button>
   <span
     class="absolute top-full left-1/2 transform -translate-x-1/2 opacity-0 group-hover:opacity-100
