--- a/Frontend/apps/admin/src/app/components/navbar/navbar.component.html
+++ b/Frontend/apps/admin/src/app/components/navbar/navbar.component.html
@@ -1,38 +1,84 @@
-<div class="flex h-screen">
+<!-- Wrapper -->
+<div class="relative flex flex-col min-h-screen w-full overflow-hidden">
   <!-- Sidebar -->
-  <div class="bg-gradient-to-b from-my-blue to-my-purple transition-all duration-300 ease-in-out"
-       [ngClass]="isCollapsed ? 'w-[64px]' : 'w-[200px]'">
-    <div class="p-2 flex justify-between items-center">
-      @if (!isCollapsed) {
-        <div class="mt-2 ml-2 text-white text-xl font-bold flex items-center space-x-2">
-          <img ngSrc="images/logo.png" alt="Logo" width="40" height="40">
-          <span>LOTUS</span>
-        </div>
-      }
-      <button mat-icon-button (click)="toggleSidebar()">
-        <mat-icon fontSet="material-icons-round" class="text-white">
-          {{ isCollapsed ? 'keyboard_double_arrow_right' : 'keyboard_double_arrow_left' }}
-        </mat-icon>
-      </button>
-    </div>
+  <div
+    #sidebarRef
+    class="fixed top-0 left-0 h-screen overflow-y-auto bg-gradient-to-b from-my-blue to-my-purple transition-all duration-300 ease-in-out"
+    [ngClass]="{
+      'w-[64px]': isCollapsed && !isScrollbarVisible,
+      'w-[80px]': isCollapsed && isScrollbarVisible,
+      'w-[200px]': !isCollapsed && !isScrollbarVisible,
+      'w-[216px]': !isCollapsed && isScrollbarVisible
+    }"
+  >
+    <!-- Logo + Toggle -->
+    <div class="overflow-y-auto">
+      <div class="flex p-2 items-center justify-between">
+        @if (!isCollapsed) {
+          <div class="mt-2 ml-2 text-white text-xl font-bold flex items-center space-x-2">
+            <img ngSrc="images/logo.png" alt="Logo" width="40" height="40"/>
+            <span>LOTUS</span>
+          </div>
+        }
+        <button
+          class="p-2 rounded-full transition-all duration-300 flex items-center"
+          (click)="toggleSidebar()"
+        >
+          <ng-icon
+            [name]="isCollapsed ? 'matKeyboardDoubleArrowRightRound' : 'matKeyboardDoubleArrowLeftRound'"
+            class="text-white"
+            size="24"
+          />
+        </button>
+      </div>
 
-    <!-- Navigation -->
-    <nav class="flex flex-col items-start text-white text-lg">
-      @for (item of navItems; track $index) {
-        <a class="flex items-center w-full py-2 px-4 hover:bg-white/10 relative group transition-all duration-300"
-           [routerLink]="item.route"
-           matRipple
-           [matTooltip]="isCollapsed ? item.name : null"
-           matTooltipPosition="right"
-           matTooltipClass="bg-black text-white text-sm px-3 py-1 rounded shadow-lg"
-           [class.bg-blue-400]="router.url === item.route">
-          <mat-icon fontSet="material-icons-round" class="text-white mr-2">{{ item.icon }}</mat-icon>
-          <span class="flex-1 transition-all duration-300 ease-in-out overflow-hidden text-left"
-                [ngStyle]="{ width: isCollapsed ? '0px' : 'auto', opacity: isCollapsed ? 0 : 1 }">
-            {{ item.name }}
-          </span>
-        </a>
-      }
-    </nav>
+      <!-- Navigation -->
+      <nav class="flex flex-col items-start text-white text-lg">
+        @for (item of navItems; track $index) {
+          <div class="w-full">
+            <a
+              #itemRef
+              class="relative flex items-center w-full py-2 px-4 hover:bg-white/10 transition-all duration-300"
+              [routerLink]="item.route"
+              [ngClass]="{ 'bg-blue-400': router.url === item.route }"
+              (mouseenter)="showTooltip(item.name, itemRef)"
+              (mouseleave)="hideTooltip()"
+            >
+              <ng-icon [name]="item.icon" class="text-white mr-3 min-w-[24px]" size="24"/>
+              <span
+                class="transition-all duration-300 ease-in-out overflow-hidden whitespace-nowrap"
+                [ngClass]="isCollapsed ? 'opacity-0 w-0' : 'opacity-100 w-auto'">
+                {{ item.name }}
+              </span>
+            </a>
+          </div>
+        }
+      </nav>
+    </div>
   </div>
+
+  <!-- Main Content -->
+  <div
+    class="flex-1 flex flex-col overflow-y-auto overflow-x-hidden transition-all duration-300 ease-in-out p-5 text-justify min-h-full bg-my-offwhite text-my-darknavy"
+    [ngClass]="{
+      'ml-[64px]': isCollapsed && !isScrollbarVisible,
+      'ml-[80px]': isCollapsed && isScrollbarVisible,
+      'ml-[200px]': !isCollapsed && !isScrollbarVisible,
+      'ml-[216px]': !isCollapsed && isScrollbarVisible
+    }"
+  >
+    <router-outlet></router-outlet>
+    <div class="flex-1"></div> <!-- Spacer để đẩy footer xuống -->
+    <app-footer></app-footer>
+  </div>
+
+  <!-- Tooltip -->
+  @if (isCollapsed && tooltipVisible) {
+    <span
+      [ngStyle]="{ top: tooltipTop + 'px', left: tooltipLeft + 'px' }"
+      class="fixed px-4 py-2 bg-black text-white text-sm rounded z-[9999] whitespace-nowrap pointer-events-none transition-opacity duration-200"
+    >
+      {{ tooltipText }}
+    </span>
+  }
 </div>
