Add logic for login 14-05-2025

--- a/Frontend/apps/admin/src/app/components/footer/footer.component.html
+++ b/Frontend/apps/admin/src/app/components/footer/footer.component.html
@@ -5,9 +5,21 @@
         Bản quyền thuộc về © LOTUS - Lịch Sử Việt Nam
       </span>
     </p>
+    <p class="text-sm text-gray-600 mb-1">
+      Liên hệ siêu quản trị viên:
+      <a
+        href="mailto:trannhanlv2004@gmail.com"
+        class="text-my-blue hover:underline">
+        trannhanlv2004&#64;gmail.com
+      </a>
+    </p>
     <p class="text-sm text-gray-600">
-      Liên hệ: <a href="mailto:assistant.vhl.trannhanweb.io.vn@gmail.com" class="text-my-blue hover:underline">assistant.vhl.trannhanweb.io.vn&#64;gmail.com
-    </a>
+      Liên hệ hỗ trợ:
+      <a
+        href="mailto:assistant.lotus.trannhanweb@gmail.com"
+        class="text-my-blue hover:underline">
+        assistant.lotus.trannhanweb&#64;gmail.com
+      </a>
     </p>
   </div>
 </footer>
