--- a/Frontend/apps/admin/src/app/components/navbar/navbar.component.html
+++ b/Frontend/apps/admin/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         @if (!isCollapsed) {
           <div class="mt-2 ml-2 text-white text-xl font-bold flex items-center space-x-2">
             <img ngSrc="images/logo.png" alt="Logo" width="40" height="40"/>
-            <span>LOTUS</span>
+            <span id="logo">LOTUS</span>
           </div>
         }
         <button
