--- a/Frontend/global.css
+++ b/Frontend/global.css
@@ -24,6 +24,15 @@ body {
   @apply text-red-500 text-sm mt-1
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  box-shadow: 0 0 0px 1000px white inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 
 /* .toast {
   @apply bg-blue-600 text-white p-4 rounded-lg;
