--- a/Frontend/apps/admin/src/app/pages/login/login.component.html
+++ b/Frontend/apps/admin/src/app/pages/login/login.component.html
@@ -30,9 +30,9 @@
         </div>
         @if (fh.isInvalid('emailOrUserName')) {
           @if (fh.hasError('emailOrUserName', 'required')) {
-            <p class="error">Email/Tên đăng nhập là bắt buộc</p>
+            <p class="error">{{ baseUserMessage.EMAIL_OR_USER_NAME__REQUIRED }}</p>
           } @else if (fh.hasError('emailOrUserName', 'pattern')) {
-            <p class="error">Email/Tên đăng nhập không hợp lệ</p>
+            <p class="error">{{ baseUserMessage.EMAIL_OR_USER_NAME__INVALID }}</p>
           }
         }
       </div>
@@ -54,9 +54,9 @@
         </div>
         @if (fh.isInvalid('password')) {
           @if (fh.hasError('password', 'required')) {
-            <p class="error">Mật khẩu là bắt buộc</p>
+            <p class="error">{{ baseUserMessage.PASSWORD__REQUIRED }}</p>
           } @else if (fh.hasError('password', 'pattern')) {
-            <p class="error">Mật khẩu không hợp lệ</p>
+            <p class="error">{{ baseUserMessage.PASSWORD__INVALID }}</p>
           }
         }
       </div>
