--- a/Frontend/apps/admin/src/app/pages/login/login.component.html
+++ b/Frontend/apps/admin/src/app/pages/login/login.component.html
@@ -42,15 +42,29 @@
         <label for="password" class="block text-sm font-medium text-gray-700">
           Mật khẩu
         </label>
-        <div class="mt-1 flex items-center border border-gray-300 rounded-lg shadow-sm">
+        <div class="mt-1 flex items-center border border-gray-300 rounded-lg shadow-sm toggle-show-hide-password-div">
           <ng-icon name="matLockRound" class="ml-3 text-gray-600"></ng-icon>
           <input
+            #pwdInput
             id="password"
             type="password"
             placeholder="Nhập mật khẩu"
             formControlName="password"
             class="flex-1 px-4 py-2 border-none rounded-lg focus:outline-none"
           />
+          <button
+            type="button"
+            libShowHidePassword
+            [targetInput]="pwdInput"
+            [(isVisible)]="passwordVisible"
+            class="toggle-show-hide-password-btn"
+          >
+            <ng-icon
+              [name]="passwordVisible ? 'matVisibilityOffRound' : 'matVisibilityRound'"
+              class="mt-2 text-gray-500"
+              size="20px"
+            />
+          </button>
         </div>
         @if (fh.isInvalid('password')) {
           @if (fh.hasError('password', 'required')) {
