--- a/Frontend/global.css
+++ b/Frontend/global.css
@@ -24,6 +24,15 @@ body {
   @apply text-red-500 text-sm mt-1
 }
 
+.toggle-show-hide-password-div {
+  @apply relative
+}
+
+.toggle-show-hide-password-btn {
+  @apply absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700 focus:outline-none
+}
+
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
