Modify folder name 06-06-2025

--- a/Backend/WebAPI/src/main/resources/templates/verify-account.html
+++ b/Backend/WebAPI/src/main/resources/templates/verify-account.html
@@ -21,7 +21,7 @@
                         <p style="font-size: 16px;">Cảm ơn bạn đã đăng ký tài khoản. Dưới đây là mã OTP của bạn để xác
                             thực email này đã được bạn dùng để đăng ký tài khoản trên hệ thống của chúng tôi:</p>
                         <div style="text-align: center; margin: 30px 0; font-size: 24px; font-weight: bold; color: #007bff;">
-                            {OTP_CODE}
+                            <strong>{OTP_CODE}</strong>
                         </div>
                         <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng {EXPIRATION_TIME}
                             phút.</p>
