--- a/Backend/WebAPI/src/main/resources/templates/reset-password.html
+++ b/Backend/WebAPI/src/main/resources/templates/reset-password.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Đặt lại mật khẩu</title>
+    <title>Xác thực OTP</title>
 </head>
 <body style="margin: 0; padding: 0; background-color: #f5f5f5; font-family: Arial, sans-serif;">
 <table align="center" width="100%" cellpadding="0" cellspacing="0" style="padding: 30px 0;">
@@ -12,22 +12,21 @@
                    style="background-color: #ffffff; border-radius: 8px; overflow: hidden; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
                 <tr>
                     <td style="background: linear-gradient(90deg, #007bff, #a615dc); color: #ffffff; padding: 20px; text-align: center;">
-                        <h1 style="margin: 0; font-size: 24px;">Đặt lại mật khẩu</h1>
+                        <h1 style="margin: 0; font-size: 24px;">Xác thực tài khoản</h1>
                     </td>
                 </tr>
                 <tr>
                     <td style="padding: 30px; color: #333333;">
-                        <p style="font-size: 16px;">Chào bạn, <strong>${username}</strong>!</p>
-                        <p style="font-size: 16px;">Chúng tôi đã nhận được yêu cầu đặt lại mật khẩu cho tài khoản của
-                            bạn. Nếu bạn yêu cầu thay đổi mật khẩu, vui lòng nhấn vào nút bên dưới:</p>
-                        <div style="text-align: center; margin: 30px 0;">
-                            <a href="${resetPasswordLink}"
-                               style="background: linear-gradient(90deg, #007bff, #a615dc); color: white; text-decoration: none; padding: 12px 24px; border-radius: 5px; font-size: 16px; display: inline-block;">
-                                Đặt lại mật khẩu
-                            </a>
+                        <p style="font-size: 16px;">Chào bạn, <strong>{USER_NAME}</strong>!</p>
+                        <p style="font-size: 16px;"> DCó vẻ bạn vừa gửi yêu cầu thay đổi mật khẩu. Dưới đây là mã OTP
+                            xác nhận bạn là người gửi yêu cầu:</p>
+                        <div style="text-align: center; margin: 30px 0; font-size: 24px; font-weight: bold; color: #007bff;">
+                            <strong>{OTP_CODE}</strong>
                         </div>
-                        <p style="font-size: 14px; color: #777777;">Nếu bạn không yêu cầu thay đổi mật khẩu, vui lòng bỏ
-                            qua email này.</p>
+                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng {EXPIRATION_TIME}
+                            phút.</p>
+                        <p style="font-size: 14px; color: #777777;">Nếu bạn không tạo tài khoản, vui lòng bỏ qua email
+                            này.</p>
                     </td>
                 </tr>
                 <tr>
