--- a/Backend/WebAPI/src/main/resources/templates/verify-account.html
+++ b/Backend/WebAPI/src/main/resources/templates/verify-account.html
@@ -23,7 +23,7 @@
                         <div style="text-align: center; margin: 30px 0; font-size: 24px; font-weight: bold; color: #007bff;">
                             <strong>{OTP_CODE}</strong>
                         </div>
-                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng {EXPIRATION_TIME}
+                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng <strong>{EXPIRATION_TIME}</strong>
                             phút.</p>
                         <p style="font-size: 14px; color: #777777;">Nếu bạn không tạo tài khoản, vui lòng bỏ qua email
                             này.</p>
