--- a/Frontend/apps/admin/src/app/pages/profile/profile.component.html
+++ b/Frontend/apps/admin/src/app/pages/profile/profile.component.html
@@ -1,1 +1,125 @@
-<p>profile works!</p>
+<div class="min-h-screen bg-gray-100 flex items-center justify-center p-4">
+  <!-- Profile Card -->
+  <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-3xl text-lg">
+    <div class="flex items-center justify-between">
+      <!-- Avatar Section -->
+      <div class="relative group">
+        <div class="p-[3px] w-32 h-32 rounded-xl overflow-hidden border-2 bg-gradient-to-r from-my-blue to-my-purple">
+          <div class="bg-white rounded-lg">
+            <img [ngSrc]="user.avatarUrl || 'images/logo.png'" width="50" height="50" alt="Avatar"
+                 class="w-full h-auto object-cover rounded-lg">
+          </div>
+        </div>
+        <!-- Hover Buttons -->
+        <div
+          class="absolute inset-0 flex items-center justify-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity">
+          <button class="bg-myblue text-white px-2 py-1 rounded text-sm hover:bg-blue-600">Update</button>
+          <button class="bg-red-500 text-white px-2 py-1 rounded text-sm hover:bg-red-600">Delete</button>
+        </div>
+      </div>
+
+      <!-- User Info -->
+      <div class="flex-1 ml-6">
+        <h2 class="text-xl font-bold text-gray-800">{{ user.userName }}</h2>
+        <p class="text-gray-600">{{ user.email }}</p>
+        <p class="text-gray-600">{{ user.lastName + ' ' + user.firstName }}</p>
+      </div>
+
+      <!-- Role Section -->
+      <div class="ml-auto mr-20 mt-[-10px]">
+        <h2 class="text-xl font-semibold text-gray-800">Vai trò</h2>
+        <p class="text-myblue font-semibold">{{ fullRoleReader[fullRole] }}</p>
+      </div>
+
+      <!-- Admin Role & Dates -->
+      <div class="text-left">
+        <p class="text-sm text-gray-500">Ngày tạo: {{ user.createdAt | date: 'dd/MM/yyyy-HH:MM:SS' }}</p>
+        <p class="text-sm text-gray-500">Ngày cập nhật gần nhất: {{ user.updatedAt | date: 'dd/MM/yyyy-HH:MM:SS' }}</p>
+        <p class="text-sm text-gray-500">Ngày đăng nhập gần nhất: {{ user.lastLogin | date: 'dd/MM/yyyy-HH:MM:SS' }}</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Form Sections -->
+  <!--  <div class="mt-8 bg-white rounded-lg shadow-lg p-6 w-full max-w-3xl space-y-6">-->
+  <!--    &lt;!&ndash; Section 1: Username & Email &ndash;&gt;-->
+  <!--    <div class="border-b pb-4">-->
+  <!--      <div class="flex justify-between items-center">-->
+  <!--        <h3 class="text-lg font-semibold text-gray-800">Account Information</h3>-->
+  <!--        <button (click)="toggleEdit('account')" class="text-myblue hover:text-blue-600">-->
+  <!--          {{ editModes.account ? 'Cancel' : 'Edit' }}-->
+  <!--        </button>-->
+  <!--      </div>-->
+  <!--      <div *ngIf="editModes.account" class="mt-4 space-y-4">-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">Username</label>-->
+  <!--          <input [(ngModel)]="user.username" type="text" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">Email</label>-->
+  <!--          <input [(ngModel)]="user.email" type="email" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">OTP Code</label>-->
+  <!--          <input [(ngModel)]="otpCode" type="text" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <button (click)="updateAccount()" class="bg-myblue text-white px-4 py-2 rounded hover:bg-blue-600">Save</button>-->
+  <!--      </div>-->
+  <!--    </div>-->
+
+  <!-- Section 2: Password -->
+  <!--    <div class="border-b pb-4">-->
+  <!--      <div class="flex justify-between items-center">-->
+  <!--        <h3 class="text-lg font-semibold text-gray-800">Change Password</h3>-->
+  <!--        <button (click)="toggleEdit('password')" class="text-myblue hover:text-blue-600">-->
+  <!--          {{ editModes.password ? 'Cancel' : 'Edit' }}-->
+  <!--        </button>-->
+  <!--      </div>-->
+  <!--      <div *ngIf="editModes.password" class="mt-4 space-y-4">-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">New Password</label>-->
+  <!--          <input [(ngModel)]="newPassword" type="password"-->
+  <!--                 class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">Confirm Password</label>-->
+  <!--          <input [(ngModel)]="confirmPassword" type="password"-->
+  <!--                 class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">OTP Code</label>-->
+  <!--          <input [(ngModel)]="otpCode" type="text" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <button (click)="updatePassword()" class="bg-myblue text-white px-4 py-2 rounded hover:bg-blue-600">Save-->
+  <!--        </button>-->
+  <!--      </div>-->
+  <!--    </div>-->
+
+  <!-- Section 3: Personal Info -->
+  <!--    <div>-->
+  <!--      <div class="flex justify-between items-center">-->
+  <!--        <h3 class="text-lg font-semibold text-gray-800">Personal Information</h3>-->
+  <!--        <button (click)="toggleEdit('personal')" class="text-myblue hover:text-blue-600">-->
+  <!--          {{ editModes.personal ? 'Cancel' : 'Edit' }}-->
+  <!--        </button>-->
+  <!--      </div>-->
+  <!--      <div *ngIf="editModes.personal" class="mt-4 space-y-4">-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">First Name</label>-->
+  <!--          <input [(ngModel)]="user.firstName" type="text"-->
+  <!--                 class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">Last Name</label>-->
+  <!--          <input [(ngModel)]="user.lastName" type="text" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <div>-->
+  <!--          <label class="block text-sm font-medium text-gray-700">Date of Birth</label>-->
+  <!--          <input [(ngModel)]="user.dob" type="date" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">-->
+  <!--        </div>-->
+  <!--        <button (click)="updatePersonalInfo()" class="bg-myblue text-white px-4 py-2 rounded hover:bg-blue-600">Save-->
+  <!--        </button>-->
+  <!--      </div>-->
+  <!--    </div>-->
+  <!--  </div>-->
+</div>
