--- a/Frontend/apps/admin/src/app/pages/login/login.component.html
+++ b/Frontend/apps/admin/src/app/pages/login/login.component.html
@@ -30,9 +30,9 @@
         </div>
         @if (fh.isInvalid('emailOrUserName')) {
           @if (fh.hasError('emailOrUserName', 'required')) {
-            <p class="error">{{ baseUserMessage.EMAIL_OR_USER_NAME__REQUIRED }}</p>
-          } @else if (fh.hasError('emailOrUserName', 'pattern')) {
-            <p class="error">{{ baseUserMessage.EMAIL_OR_USER_NAME__INVALID }}</p>
+            <p class="error">{{ userMessage.EMAIL_OR_USER_NAME__REQUIRED }}</p>
+          } @else if (fh.hasError('emailOrUserName', 'pattern') || fh.hasError('emailOrUserName', 'maxlength')) {
+            <p class="error">{{ userMessage.EMAIL_OR_USER_NAME__INVALID }}</p>
           }
         }
       </div>
@@ -42,35 +42,21 @@
         <label for="password" class="block text-sm font-medium text-gray-700">
           Mật khẩu
         </label>
-        <div class="mt-1 flex items-center border border-gray-300 rounded-lg shadow-sm toggle-show-hide-password-div">
+        <div class="mt-1 flex items-center border border-gray-300 rounded-lg shadow-sm relative">
           <ng-icon name="matLockRound" class="ml-3 text-gray-600"></ng-icon>
-          <input
-            #pwdInput
-            id="password"
-            type="password"
-            placeholder="Nhập mật khẩu"
+          <lib-password-input
             formControlName="password"
-            class="flex-1 px-4 py-2 border-none rounded-lg focus:outline-none"
-          />
-          <button
-            type="button"
-            libShowHidePassword
-            [targetInput]="pwdInput"
-            [(isVisible)]="passwordVisible"
-            class="toggle-show-hide-password-btn"
+            class="flex-1 px-4 py-1 border-none rounded-lg focus:outline-none -ml-2"
           >
-            <ng-icon
-              [name]="passwordVisible ? 'matVisibilityOffRound' : 'matVisibilityRound'"
-              class="mt-2 text-gray-500"
-              size="20px"
-            />
-          </button>
+          </lib-password-input>
         </div>
         @if (fh.isInvalid('password')) {
           @if (fh.hasError('password', 'required')) {
-            <p class="error">{{ baseUserMessage.PASSWORD__REQUIRED }}</p>
-          } @else if (fh.hasError('password', 'pattern')) {
-            <p class="error">{{ baseUserMessage.PASSWORD__INVALID }}</p>
+            <p class="error">{{ userMessage.PASSWORD__REQUIRED }}</p>
+          } @else if (fh.hasError('password', 'pattern') ||
+          fh.hasError('password', 'minlength') ||
+          fh.hasError('password', 'maxlength')) {
+            <p class="error">{{ userMessage.PASSWORD__INVALID }}</p>
           }
         }
       </div>
