--- a/Frontend/libs/angular-libs/src/lib/components/action-button/action-button.component.html
+++ b/Frontend/libs/angular-libs/src/lib/components/action-button/action-button.component.html
@@ -1,4 +1,4 @@
-<div class="relative inline-block group">
+<div class="relative inline-block group" title="">
   <button
     [ngClass]="buttonClass"
     [disabled]="disabled"
@@ -6,14 +6,19 @@
     (click)="btnClick.emit()"
   >
     <ng-icon [name]="buttonConfig.icon" class="text-xl"></ng-icon>
+    @if (mainTitle.trim() !== '') {
+      <p class="ml-1">{{ mainTitle }}</p>
+    }
   </button>
 
-  <span
-    class="absolute left-1/2 top-full mt-[5px] -translate-x-1/2 translate-y-0 opacity-0
+  @if (buttonTitle !== '') {
+    <span
+      class="absolute left-1/2 top-full mt-[5px] -translate-x-1/2 translate-y-0 opacity-0
            group-hover:translate-y-1.5 group-hover:opacity-100 pointer-events-none
            bg-black text-white text-sm rounded px-2 py-1 transition-all duration-300 ease-out
            max-w-[300px] text-center z-10 whitespace-nowrap"
-  >
-    {{ buttonConfig.title }}
-  </span>
+    >
+      {{ buttonTitle }}
+    </span>
+  }
 </div>
