--- a/Frontend/apps/admin/src/app/pages/lessons-outer/lessons-outer.component.html
+++ b/Frontend/apps/admin/src/app/pages/lessons-outer/lessons-outer.component.html
@@ -1,1 +1,3 @@
-<p>lessons-outer works!</p>
+<lib-action-button name="add" (btnClick)="goToAddHistoricalPeriodPage()"></lib-action-button>
+
+<p>{{ historicalPeriods | json }}</p>
