--- a/Frontend/libs/angular-libs/src/lib/components/action-button/action-button.component.html
+++ b/Frontend/libs/angular-libs/src/lib/components/action-button/action-button.component.html
@@ -1,4 +1,8 @@
-<div class="relative inline-block group" title="">
+<div
+  class="relative inline-block group p-[0.15rem] rounded-xl bg-gradient-to-r from-my-blue to-my-purple
+  transition-all duration-300 ease-out transform hover:scale-110 hover:shadow-sm"
+  title=""
+>
   <button
     [ngClass]="buttonClass"
     [disabled]="disabled"
