--- a/Frontend/libs/angular-libs/src/lib/components/default-avatar/default-avatar.component.html
+++ b/Frontend/libs/angular-libs/src/lib/components/default-avatar/default-avatar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="relative p-1 w-72 h-72 rounded-xl overflow-hidden border-1 bg-gradient-to-r from-my-yellow to-my-coralaccent mb-5">
+  class="relative p-1 w-72 h-72 rounded-xl overflow-hidden border-1 bg-gradient-to-r from-my-lightblue to-my-lightpurple mb-5">
 
   <!-- Avatar Letter -->
   <div
